[package]
name = "crkbd_gui"
version = "0.1.0"
description = "A manager for crkbd keyboard"
authors = ["SergioRibera"]
license = "MIT"
repository = ""
default-run = "crkbd_gui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.12" }

[dependencies]
clap = "3.1.18"
hidapi = "1.4.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.4", features = [ "api-all" ] }
prisma = "0.1.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
